# ynab-il-importer

./: .env.example  .gitignore  README.md  REPOSITORY_LAYOUT.md  agents.md  pixi.toml  plan.md  pyproject.toml  tmp_card_snapshot.xlsx
.codex/: config.toml
config/: ynab.example.toml
contexts/: defaults.toml
documents/: README.md  SCHEMA.md  architecture_overview.md  card_reconciliation_bootstrap_2025_10_2025_11.md  card_reconciliation_bootstrap_2025_12_2026_01.md  card_reconciliation_bootstrap_20260316.md  card_reconciliation_bootstrap_2026_01_2026_02.md  card_reconciliation_bootstrap_x5898_2025_09_2025_10.md  card_reconciliation_notes.md  claude_on_hierarchical_data.md  cleanup_plan.md  code_review_prompt.md  context_workflow_implementation_plan.md  context_workflow_spec.md  findings_2026-02-23.md  handle_splits_implementation_plan.md  hostile_audit_prompt.md  hostile_audit_report.md  pilates_workflow.md  plan.md  project_context.md  reconcile_polars_migration.md  reconciliation_packets.md  review_app_architecture_notes.md  review_app_workflow.md  split_transactions_consultation.md  streamlit_review_ui_plan.md  update_workflow.md  upload_reconcile_cutover_plan.md  upload_reconcile_cutover_spec.md
mappings/: account_name_map.csv  account_name_map_seed.csv  fingerprint_map before tokens.csv  fingerprint_map.csv  payee_map.csv
notebooks/: bankin_inspect.ipynb  card_account_check.ipynb
outputs/: fake_matched_pairs.csv  fake_proposed_transactions.csv  fingerprint_groups edited.csv  fingerprint_groups.csv  fingerprint_log.csv  matched_pairs.csv  ynab_categories.csv  (+10 more)
(+501 files in other folders)
